--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
     </style>
     <script src="http://cdn.bootcss.com/three.js/r78/three.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/TweenMax.min.js"></script>
+    <script src="https://blog-static.cnblogs.com/files/goforxiaobo/TweenMax.min.js"></script>
 </head>
 <body>
     <script>
