--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             overflow: hidden;
         }
     </style>
-    <script src="https://blog-static.cnblogs.com/files/goforxiaobo/three.min.js"></script>
+    <script src="https://blog-static.cnblogs.com/files/goforxiaobo/three.min2.js"></script>
     <script src="https://blog-static.cnblogs.com/files/goforxiaobo/TweenMax.min.js"></script>
 </head>
 <body>
