--- a/star.html
+++ b/star.html
@@ -22,10 +22,10 @@
 			<div class="nav_bar">
 				<ul class="nav_bar_ul">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="#">page2</a></li> 
-					<li><a href="#">page3</a></li>
-					<li><a href="#">page4</a></li>
-					<li><a href="#">page5</a></li>
+					<li><a href="#">关于我</a></li> 
+					<li><a href="#">技术栈</a></li>
+					<li><a href="#">项目经验</a></li>
+					<li><a href="#">联系我</a></li>
 				</ul>
 			</div>
 		</div>
@@ -38,10 +38,10 @@
 		<div class="cen_text">
 			<h2>世上只有想不通的人，没有走不通的路。</h2>
 			<hr>
-			<h3>张婷</h3>
+			<h3>胡晓柏/AZUKI七</h3>
 			<h3>Web前端工程师</h3>
-			<h3>求职上海 / 苏州</h3>
-			<h3>18551133163</h3>
+			<h3>求职 / </h3>
+			<h3>15145991117</h3>
 		</div>
 		
 	</div>
@@ -67,29 +67,28 @@
 						<td rowspan="6">
 							<img src="images/portrait1.jpg">
 						</td>
-						<td>姓名 | 张婷</td>
-						<td>手机 | 18551133163</td>
+						<td>姓名 | 胡晓柏</td>
+						<td>手机 | 15145991117</td>
 					
 					</tr>
 					<tr>
-						<td>性别 | 女</td>
-						<td>邮箱 | 593022384@qq.com</td>
+						<td>性别 | 男</td>
+						<td>邮箱 | 929703971@qq.com</td>
 					</tr>
 					<tr>
-						<td>出生 | 1992.08.23</td>
-						
-						<td>QQ号 | 593022384</td>
+						<td>出生 | 1997.02.03</td>
+						<td>QQ号 | 929703971</td>
 					</tr>
 					<tr>
-						<td>居住 | 江苏省苏州市</td>
-						<td>户籍 | 江苏省常州市</td>
+						<td>居住 | 黑龙江大庆市</td>
+						<td>户籍 | 黑龙江齐齐哈尔市</td>
 					</tr>
 					<tr>
 						<td>学历 | 本科</td>
-						<td>学校 | 淮阴师范学院</td>
+						<td>学校 | 哈尔滨学院</td>
 					</tr>
 					<tr>
-						<td>专业 | 计算机科学与技术</td>
+						<td>专业 | 旅游管理</td>
 						<td>英语 | 英语六级</td>
 					</tr>
 					<tr>
