--- a/index.html
+++ b/index.html
@@ -282,10 +282,8 @@
         renderer.render(scene, camera);
 
         // if (time < 800)
-        requestAnimationFrame(render);
-        
-        
-        function(time){if(time>1500){alert('出出出出彩')}}
+        requestAnimationFrame(render);    function(time){if(time>1500){alert('出出出出彩')}}
+    }
 
     var vertexShader = [
     "varying vec2 vUv;",
