--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         renderer.render(scene, camera);
 
         // if (time < 800)
-        requestAnimationFrame(render);    function(time){if(time>1500){alert('出出出出彩')}}
+        requestAnimationFrame(render);    
     }
 
     var vertexShader = [
