--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             overflow: hidden;
         }
     </style>
-    <script src="https://blog-static.cnblogs.com/files/goforxiaobo/three.min2.js"></script>
-    <script src="https://blog-static.cnblogs.com/files/goforxiaobo/TweenMax.min.js"></script>
+    <script src="http://cdn.bootcss.com/three.js/r78/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/TweenMax.min.js"></script>
 </head>
 <body>
     <script>
@@ -334,4 +334,3 @@
     </script>
 </body>
 </html>
-
