--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
             overflow: hidden;
         }
     </style>
-    <script src="http://cdn.bootcss.com/three.js/r78/three.min.js"></script>
+    <script src="https://cdn.bootcss.com/three.js/r78/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/TweenMax.min.js"></script>
+    <script>//https://blog-static.cnblogs.com/files/goforxiaobo/TweenMax.min.js</script>
+    <script>//https://blog-static.cnblogs.com/files/goforxiaobo/three.min2.js</script>
 </head>
 <body>
     <script>
