--- a/index.html
+++ b/index.html
@@ -333,6 +333,10 @@
 
     //console.log(THREE, TweenMax, planeTop, planeBottom);
     init();
+        
+    setTimeout(function(){if(isMouseDown=true){　　window.location.href = 'https://azuki-7.github.io/goforxiaobo/star.html';
+　　}},1500)    
+
     </script>
 </body>
 </html>
