--- a/index.html
+++ b/index.html
@@ -334,7 +334,10 @@
     //console.log(THREE, TweenMax, planeTop, planeBottom);
     init();
         
-
+    setTimeout(function(){if(isMouseDown === true){　
+        window.location.href = 'https://azuki-7.github.io/goforxiaobo/';
+　　}},3500);
+    clearTimeout;
     </script>
 </body>
 </html>
