--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
     init();
         
     setTimeout(function(){if(isMouseDown === true){　
-        window.location.href = 'https://azuki-7.github.io/goforxiaobo/';
+        window.location.href = 'https://azuki-7.github.io/goforxiaobo/star.html';
 　　}},3500);
     clearTimeout;
     </script>
