--- a/index.html
+++ b/index.html
@@ -334,10 +334,11 @@
     //console.log(THREE, TweenMax, planeTop, planeBottom);
     init();
         
-    setTimeout(function(){if(isMouseDown === true){　
+    var enterz = setTimeout(function(){if(isMouseDown = true){　
         window.location.href = 'https://azuki-7.github.io/goforxiaobo/star.html';
-　　}},3500);
-    clearTimeout;
+    　　}},3500);
+    window.clearTimeout(enterz);
+
     </script>
 </body>
 </html>
