--- a/index.html
+++ b/index.html
@@ -334,10 +334,12 @@
     //console.log(THREE, TweenMax, planeTop, planeBottom);
     init();
         
-    var enterz = setTimeout(function(){if(isMouseDown = true){　
+    setTimeout(function(){
+        if(isMouseDown = true){　
         window.location.href = 'https://azuki-7.github.io/goforxiaobo/star.html';
-    　　}},3500);
-    window.clearTimeout(enterz);
+    　　}
+    },3500);
+   
 
     </script>
 </body>
