--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         window.location.href = 'https://azuki-7.github.io/goforxiaobo/star.html';
     　　}
     },3500);
-   
+    clearsetTimeout
 
     </script>
 </body>
