--- a/index.html
+++ b/index.html
@@ -333,12 +333,12 @@
     //console.log(THREE, TweenMax, planeTop, planeBottom);
     init();
         
-    JL = setTimeout(function(){
+    /*  JL = setTimeout(function(){
         if(isMouseDown = true){　
         window.location.href = 'https://azuki-7.github.io/goforxiaobo/star.html';
     　　}
     },3500);
-    clearsetTimeout(JL);
+    clearsetTimeout(JL);*/
 
     </script>
 </body>
