--- a/star.html
+++ b/star.html
@@ -37,11 +37,10 @@
             <img onmousemove="this.src='images/22.png'"/ onmouseout="this.src='images/portrait1.jpg'"/ src="images/portrait1.jpg">
         </div>
 		<div class="cen_text">
-			<h2>世上只有想不通的人，没有走不通的路。</h2>
+			<h2>你是怎样，你的世界就是怎样。</h2>
 			<hr>
 			<h3>胡晓柏/AZUKI七</h3>
 			<h3>Web前端工程师</h3>
-			<h3>求职 / </h3>
 			<h3>15145991117</h3>
 		</div>
 		
