--- a/star.html
+++ b/star.html
@@ -34,7 +34,7 @@
 	
 	<div class="cen_con">
 		<div class="portrait">
-            <img onmousemove="this.src='images/22.png'"/ onmouseout="this.src='images/portrait1.jpg'"/ src="images/portrait1.jpg">
+            <img onmousemove="this.src='images/22.png'"/ onmouseout="this.src='images/me.jpg'"/ src="images/me.jpg">
         </div>
 		<div class="cen_text">
 			<h2>你是怎样，你的世界就是怎样。</h2>
@@ -65,7 +65,7 @@
 				<tbody>
 					<tr>
 						<td rowspan="6">
-							<img src="images/portrait1.jpg">
+							<img src="images/cool.png" style="height: 300px;">
 						</td>
 						<td>姓名 | 胡晓柏</td>
 						<td>手机 | 15145991117</td>
