--- a/star.html
+++ b/star.html
@@ -65,7 +65,7 @@
 				<tbody>
 					<tr>
 						<td rowspan="6">
-							<img src="images/cool.png" style="height: 300px;">
+							<img src="images/cool.png" style="height: 300px;border-radious:100%;">
 						</td>
 						<td>姓名 | 胡晓柏</td>
 						<td>手机 | 15145991117</td>
