--- a/star.html
+++ b/star.html
@@ -89,7 +89,7 @@
 					</tr>
 					<tr>
 						<td>专业 | 旅游管理</td>
-						<td>英语 | 英语六级</td>
+						<td>爱好 | 读书学习</td>
 					</tr>
 					<tr>
 						<td colspan="3">
@@ -245,15 +245,15 @@
 			<ul class="con_style">
 				<li>
 					<span></span>
-					<p>江苏省苏州市园区</p>
+					<p>大东北</p>
 				</li>
 				<li>
 					<span></span>
-					<p>593022384@qq.com</p>
+					<p>929703971@qq.com</p>
 				</li>
 				<li>
 					<span></span>
-					<p>18551133163</p>
+					<p>15145991117</p>
 				</li>
 			</ul>
 			<div class="contact_info">
