--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     //console.log(THREE, TweenMax, planeTop, planeBottom);
     init();
         
-    setTimeout(function(){
+    setInterval(function(){
         if(speed >= 20){　
         window.location.href = 'https://azuki-7.github.io/goforxiaobo/star.html';
     　　}
