--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>a5</title>
+    <title>长按鼠标通过隧道</title>
     <style>
         body {
             margin: 0;
